--- a/journal/applying LIME to bullet data journal.Rmd
+++ b/journal/applying LIME to bullet data journal.Rmd
@@ -1,17 +1,26 @@
 ---
-title: "Applying LIME to Bullet Data Journal"
+title: "Applying LIME to Bullet Data Research Journal"
 author: "Katherine Goode"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 output:
   html_document:
     toc: true
-    toc_depth: 4
+    toc_depth: 2
     toc_float: true
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, eval = TRUE, warning = FALSE, fig.pos = "center")
+knitr::opts_chunk$set(echo = TRUE, eval = TRUE, message = FALSE, warning = FALSE, 
+                      fig.pos = "center")
+```
 
+# Overview 
+
+I decided to start a journal to keep track of the work I am doing in regards to applying LIME to the Hamby bullet data. I have been trying to decide which input values to use for LIME in the forensic examiners' paper, and I have decided that I would like to simplify matters even more by only focusing on a few input options. I have considered a handful of ways of answering this question (accuracy within one implementation of lime, accuracy across 10 implementations of lime, etc.), but I would like to reserve some of these ways for a future more technical paper. However, I would like a place to store my work to use for future purposes, and it would be nice to have a place to work where I do not feel the need to optimize code. I am hoping that this will be a place where I can write drafts of code and create first versions of graphics. Then I can clean up and organize the code when I write the paper.
+
+Prior to this journal, I had been working on all of my ideas in the R markdown document for the paper, but now I am going to transfer a lot of that code to this journal. Many of the sections below include work that I did earlier this semester. I am just transferring them here now. Later I will move the necessary parts to the paper.
+
+```{r}
 # Load libraries
 library(tidyverse)
 library(bulletr)
@@ -36,15 +45,9 @@ hamby224_test_explain <- readRDS("../data/hamby224_test_explain.rds")
 rf_features <- rownames(rtrees$importance)
 ```
 
-## 12/5/18 - 12/14/18
+# Plots of Features
 
-I decided to start a journal this week to keep track of the work I am doing in regards to applying LIME to the Hamby bullet data. I have been trying to decide which input values to use for LIME in the forensic examiners' paper, and I have decided that I would like to simplify matters even more by only focusing on a few input options. I have considered a handful of ways of answering this question (accuracy within one implementation of lime, accuracy across 10 implementations of lime, etc.), but I would like to reserve some of these ways for a future more technical paper. However, I would like a place to store my work to use for future purposes, and it would be nice to have a place to work where I do not feel the need to optimize code. I am hoping that this will be a place where I can write drafts of code and create first versions of graphics. Then I can clean up and organize the code when I write the paper.
-
-Prior to this journal, I had been working on all of my ideas in the R markdown document for the paper, but now I am going to transfer a lot of that code to this journal. Many of the sections below include work that I did earlier this semester. I am just transferring them here now. Later I will move the necessary parts to the paper.
-
-### Previous Work
-
-#### Feature Plots of Training and Testing Data Filled by `samesource`
+## Distributions by `samesource`
 
 I created the following two plots of the training data as suggested by Heike. The histograms below show the distributions of the features used in the random forest `rtrees`. The histograms are filled by the `samesource` variable, which is the truth of whether or not the comparison is from the same barrel and land. The default histograms make it hard to compare the distributions of the matches and non-matches since there are many more comparisons that have `samesource == FALSE`.
 
@@ -112,7 +115,7 @@ hamby224_test %>%
   theme(legend.position = "bottom")
 ```
 
-#### Correlation Plots of Training and Testing Data
+## Correlations
 
 I made these plots to look at the correlation between features in the training data within the TRUE and FALSE cases of samesource. The features are highly correlated for the match comparisons. It is clear that the variables are more correlated with the match comparisons than the non-match comparisons. However, there are still some variables that are relatively highly correlation with the non-match comparisons.
 
@@ -233,7 +236,7 @@ plot_grid(cor_title_test,
           rel_heights = c(0.25, 3))
 ```
 
-#### Visualizations of the LIME Explanations
+# Visualizations of Explanations
 
 Heike made a plot with the structure of the one below when we began with the default settings of `lime`. This one has been created from the lime explanations with 2 quantile bins. It includes all three of the chosen features for each case in the testing dataset. For both sets, the cutoff of 0.275 < ccf occurs the most frequently.
 
@@ -266,7 +269,7 @@ hamby224_test %>%
   labs(x = "", y = "", fill = "RF Score")
 ```
 
-#### Draft of LIME Procedure from the `lime` R Package
+# Draft of LIME Procedure
 
 I wrote this up to start thinking about how to describe the procedure that the `lime` R package uses to implement the LIME algorithm. It needs a lot of work, but it is a start. The final version of this will end up in the technical stats paper critiquing LIME. The version in the firearm examiner's paper will be much simpler...
 
@@ -314,11 +317,25 @@ For the prediction of interest,
 
 Note: I realized that if `bin_continuous = FALSE`, then bins are not used at all. Instead, a kernel density estimator is used to sample from the distribution (or a normal distribution if specified), and then the ridge regression models are fit without "numerified" values.
 
-### Work on Determining Input Values for LIME
+# Tree Based Bins
+
+## Functions
+
+Heike wrote the function `treebink` to take x and y variables for fitting a tree and returning the cuts for $k$ bins based on the splits from the tree. Here is an example using the function below with the predictor variable of ccf.
+
+```{r echo = TRUE}
+treebink(y = hamby173and252_train$samesource, x = hamby173and252_train$ccf, k = 5)
+```
+
+I wrote the function `mylime`, which adds an option in the `lime` function from the LIME package to use Heike's function `treebink` to obtain tree based bins. The output from `mylime` can then be input into the `explain` function to obtain explanations. I was able to rerun all of the code for creating the `hamby224_test_explain` dataset with the explanations from the tree based bins included for 2 to 6 bins. I've been working on redoing code from earlier in this journal to work for the added binning method.
+
+There seems to be a problem with `treebink` with certain variables with high enough bins. The function returns more than the desired number of bins. Heike is going to look into this.
+
+# Assessing Lime Explanations
 
 When we began looking at the explanations from `lime` with the default settings, we did not think that they made sense. This led me to try applying LIME with a handful of input values. However, since LIME is based on random permutations, I was curious to know how consistent the results were. This led me to try running each implementation for specific starting values a handful of times. The next two sections consider the results from these studies.
 
-#### Assessing the Accuracy of the LIME Results
+## Accuracy
 
 The figures in this section are created from the implementations of LIME on the set 1 from the training data for the input options of 2 to 6 quantile bins, 2 to 6 equally spaced bins, kernel density estimation, and normal distribution approximation. Each set of input values was only run once.
 
@@ -328,18 +345,16 @@ The figures in this section are created from the implementations of LIME on the 
 hamby224_lime_comparisons <- readRDS("../data/hamby224_lime_comparisons.rds")
 ```
 
-##### Complex versus Simple Model Predictions
+### Complex versus Simple Model Predictions
 
 The plot below compares the predictions from the "simple model" (the ridge regression model) and the "complex model" (the random forest `rtrees`) on the x-axis from the lime implementations with bin estimation (`bin_continuous == TRUE`). The simple model predictions are on the y-axis, and the complex model predictions are on the x-axis. The plot is faceted by number of bins and whether or not the bins are equally spaced or based on quantiles. The points are colored by the $R^2$ value from the fit of the simple model. The lines are linear regression lines fit to the data points within a facet. We would hope that there is a linear relationship between these two variables. None of the cases show strong linear trends, but some are more linear than others. The quantile bins show that the simple model never makes a prediction over 0.6, whereas the random forest model can have predictions of up to 1. The equally spaced bins do have probabilities that exceed 0.6, but only with 3 and 6 bins. I noticed that within the facets, the points are in mostly horizontal strips, and the number of strips is about the number of bins from the lime implementation.
 
 ```{r}
 hamby224_lime_comparisons %>%
-  mutate(quantile_bins = fct_recode(factor(quantile_bins), "equal bins" = "FALSE",
-                                    "quantile bins" = "TRUE")) %>%
   filter(!is.na(rfscore), set == "Set 1", bin_continuous == TRUE) %>%
   ggplot(aes(x = rfscore, y = model_prediction)) + 
   geom_point(aes(color = model_r2)) + 
-  facet_grid(quantile_bins ~ nbins) + 
+  facet_grid(bin_method ~ nbins) + 
   theme_bw() + 
   stat_smooth(method = "lm", se = FALSE, size = 0.5) + 
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
@@ -349,12 +364,10 @@ The plot below shows the absolute value of the difference between the complex mo
 
 ```{r}
 hamby224_lime_comparisons %>%
-  mutate(quantile_bins = fct_recode(factor(quantile_bins), "equal bins" = "FALSE",
-                                    "quantile bins" = "TRUE")) %>%
   filter(!is.na(rfscore), set == "Set 1", bin_continuous == TRUE) %>%
   ggplot(aes(x = rfscore, y = abs(diff))) + 
   geom_point(aes(color = model_r2)) + 
-  facet_grid(quantile_bins ~ nbins) + 
+  facet_grid(bin_method ~ nbins) + 
   theme_bw() + 
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
@@ -363,7 +376,7 @@ At some point, I got the idea in my head that it would be interesting to look at
 
 ```{r}
 hamby224_lime_comparisons %>%
-  filter(quantile_bins == FALSE, nbins == "3", set == "Set 1") %>%
+  filter(quantile_bins == FALSE, bin_method == "equally_spaced", nbins == "3", set == "Set 1") %>%
   select(rf_features, diff, -case) %>%
   gather(key = feature, value = feature_value, rf_features) %>%
   select(feature, feature_value, diff) %>%
@@ -373,7 +386,7 @@ hamby224_lime_comparisons %>%
   geom_hline(yintercept = 0, color = "blue")
 ```
 
-##### Comparing Input Values by MSE and $R^2$
+### Comparing Input Values by MSE and $R^2$
 
 In order to assess which lime implementation is doing the best job of capturing the predictions from the random forest model, I decided to calculate the mean squared error for each of the input situations. I defined the mean squared error as 
   $$\frac{\sum_{i=1}^n (\hat{p}_{\mbox{simple},i}-\hat{p}_{\mbox{complex},i})^2}{n}$$
@@ -382,28 +395,12 @@ where $n$ is the number of observations in the testing dataset (within a set). A
 ```{r}
 hamby224_lime_results <- hamby224_lime_comparisons %>%
   filter(!is.na(rfscore)) %>%
-  group_by(bin_continuous, quantile_bins, nbins, use_density, set) %>%
+  group_by(situation, bin_situation, bin_continuous, quantile_bins, nbins, use_density, 
+           bin_method, set) %>%
   summarise(mse = (sum(diff^2)) / length(diff),
             ave_r2 = mean(model_r2)) %>%
   arrange(set) %>%
-  ungroup() %>%
-  mutate(nbins = as.numeric(as.character(nbins))) %>%
-  mutate(situation = ifelse(bin_continuous == TRUE & quantile_bins == TRUE, 
-                            sprintf("%.0f quantile bins", nbins),
-                            ifelse(bin_continuous == TRUE & quantile_bins == FALSE, 
-                                   sprintf("%.0f equally spaced bins", nbins),
-                                   ifelse(bin_continuous == FALSE & use_density == TRUE, 
-                                          "kernel density", "normal approximation")))) %>%
-  mutate(situation = fct_relevel(situation, 
-                                 "2 quantile bins", 
-                                 "3 quantile bins",
-                                 "4 quantile bins",
-                                 "5 quantile bins",
-                                 "6 quantile bins")) %>%
-  mutate(bin_situation = ifelse(bin_continuous == TRUE & quantile_bins == TRUE,
-                                "quantile bins",
-                                ifelse(bin_continuous == TRUE & quantile_bins == FALSE,
-                                       "equally spaced bins", "other")))
+  ungroup()
 ```
 
 The plot below shows the mean squared errors for each of the input situations faceted by set. In both cases, the lowest mean squared error occurs with 3 equally spaced bins. This seems to suggest that using 3 equally spaced bins should provide better explanations.
@@ -415,7 +412,8 @@ hamby224_lime_results %>%
   facet_grid( ~ set) + 
   theme_bw() + 
   theme(axis.text.x = element_text(angle = 45, hjust = 1), 
-        legend.position = "bottom")
+        legend.position = "bottom") + 
+  labs(x = "Situation", y = "MSE", color = "")
 ```
 
 The plot below shows the average $R^2$ value for each of the input situations faceted by set. The results are very similar for each set, and the highest $R^2$ values occur for 2 quantile bins. The $R^2$ values for 3 equally spaced bins are in the middle.
@@ -427,10 +425,11 @@ hamby224_lime_results %>%
   facet_grid( ~ set) + 
   theme_bw() + 
   theme(axis.text.x = element_text(angle = 45, hjust = 1),
-        legend.position = "bottom")
+        legend.position = "bottom") + 
+  labs(x = "Situation", y = "Average R2", color = "")
 ```
 
-#### Assessing the Variability of the LIME Results
+## Variability
 
 In order to assess how variable the LIME results are, I ran each of the 12 input situations 10 times. I wanted to look at the variability of the mse for each situation, and I wanted to see how consistent the choice of selected features is by LIME.
 
@@ -633,7 +632,7 @@ hamby224_test %>%
 
 ```
 
-#### Deciding on LIME Input Settings
+## Input Rankings
 
 In order to decide on which LIME settings to use for the firearm examiners' paper, I decided to create a table that ranks each of the 12 input settings by MSE from the single implementation, the average MSE across the 10 implementations, the average number of top features chosen across the 10 implementations, and the average $R^2$ value from the single implementation. The first table below is for set 1, and the second table below is for set 11.
 
@@ -701,45 +700,104 @@ joined_results %>%
                 caption = "Results from Set 11")
 ```
 
-#### Notes on meeting with Heike
+## Heike's Suggestions
 
 * We talked about including the penalty for the number of parameters in the discussion of the paper.
 * We talked about using a tree to choose the bins. This would allow us to automate the process and to obtain a penalty parameter since the trees give us nesting. (MSE + lambda * p where p is the from the number of trees multiplied by the number of ...)
 * Look at the AUC after binning
 
-## 12/15/18 - 1/13/19
-
-Heike wrote the function `treebink` to take x and y variables for fitting a tree and returning the cuts for $k$ bins based on the splits from the tree. Here is an example using the function below with the predictor variable of ccf.
-
-```{r echo = TRUE}
-treebink(y = hamby173and252_train$samesource, x = hamby173and252_train$ccf, k = 5)
-```
-
-## 1/14/19 - ?
-
-### Goals
-
-Goals for spring semester:
-
-- implement ideas for better binning methods
-- write draft of firearm examiner's paper with everything but the methods and results sections
-- find an idea that leads to better LIME explanations
-- once the better LIME binning method has been selected, write the methods and results sections
-- make plans for the statistical paper
-
-Goals for week 1:
-
-- set up meeting time with Heike
-- get tree method up and running
-- start to work on evaluation of the results of the new method
-- start looking into the weights
-- work on introduction and data section of firearm examiners' paper
-
-### Visualizations of Tree Based Bins Results
+## Results from One Implementation
 
 ```{r}
-# I need to fix the situations to new options 
-hamby224_test_explain %>%
+# Selects only the top features for the cases where binning was used
+top_features <- hamby224_test_explain %>%
+  filter(bin_situation != "other") %>%
+  select(set, situation, bin_situation, case, feature, feature_weight) %>%
+  mutate(feature_weight_abs = abs(feature_weight)) %>%
+  arrange(situation, case, desc(feature_weight_abs)) %>%
+  group_by(situation, case) %>%
+  slice(1)
+
+# Plots the top feature for each case for each bin situation
+ggplot(top_features, aes(x = situation, y = case, fill = feature)) + 
+  geom_tile() + 
+  facet_grid(set ~ bin_situation, scales = "free") + 
+  theme_bw() + 
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) + 
+  scale_fill_brewer(palette = "Blues")
+
+# Plots the proportions of number of top features chosen across number of bins for a case
+# within a binning method
+top_features %>%
+  group_by(set, case, bin_situation) %>%
+  summarise(nfeatures = length(levels(factor(feature)))) %>%
+  ggplot(aes(x = bin_situation, fill = factor(nfeatures))) + 
+  geom_bar(position = "stack") + 
+  facet_grid(set ~ .) + 
+  theme_bw() +
+  scale_fill_brewer(palette = "Blues")
+```
+
+## Assessing Variability
+
+In order to assess how variable the LIME results are, I ran each of the 12 input situations 10 times. I wanted to look at the variability of the mse for each situation, and I wanted to see how consistent the choice of selected features is by LIME.
+
+```{r}
+# Perform the sensitivity analysis if not already saved
+if(!file.exists("../data/hamby224_sensitivity_inputs.rds")) {
+  
+  # Specify the number of reps and input cases
+  nreps = 10
+  noptions = 12
+  
+  # Specify the inputs for the sensitivity analysis
+  hamby224_sensitivity_inputs <- data.frame(bin_continuous = c(rep(TRUE, nreps * 10), 
+                                                      rep(FALSE, nreps * 2)),
+                                   quantile_bins = c(rep(c(TRUE, FALSE), each = nreps * 5), 
+                                                     rep(TRUE, nreps * 2)),
+                                   nbins = c(rep(rep(2:6, each = nreps), 2), 
+                                             rep(4, nreps * 2)),
+                                   use_density = c(rep(TRUE, nreps * 11), 
+                                                   rep(FALSE, nreps))) %>%
+    mutate(case = 1:(nreps * noptions)) %>%
+    select(case, bin_continuous, nbins, quantile_bins, use_density)
+  
+  # Tell R to run the upcoming code in parallel
+  plan(multiprocess)
+
+  # Run lime for the sensitivity analysis
+  hamby224_sensitivity_outputs <- future_pmap(.l = as.list(hamby224_sensitivity_inputs %>%
+                                                             select(-case)),
+             .f = run_lime, # run_lime is one of my helper functions
+             train = hamby173and252_train %>% select(rf_features),
+             test = hamby224_test %>% arrange(case) %>% select(rf_features) %>% na.omit(),
+             rfmodel = as_classifier(rtrees),
+             label = "TRUE",
+             nfeatures = 3,
+             seed = FALSE) %>%
+    map_df(function(list) list$explain) %>%
+    mutate(rep = factor(rep(rep(1:nreps, each = dim(hamby224_test %>% na.omit())[1] * 3),
+                            noptions))) %>%
+    full_join(hamby224_test %>% na.omit() %>% 
+                mutate(case = as.character(case)), by = "case") %>%
+    mutate(case = factor(case)) %>%
+    select(case, model_r2:feature_weight, bin_continuous:rep, set:land2, rfscore, samesource)
+  
+  # Save the sensitivity inputs and outputs
+  saveRDS(hamby224_sensitivity_inputs, "../data/hamby224_sensitivity_inputs.rds")
+  saveRDS(hamby224_sensitivity_outputs, "../data/hamby224_sensitivity_outputs.rds")
+  
+} else {
+  
+  # Load in the sensitivity inputs and outputs
+  hamby224_sensitivity_inputs <- readRDS("../data/hamby224_sensitivity_inputs.rds")
+  hamby224_sensitivity_outputs <- readRDS("../data/hamby224_sensitivity_outputs.rds")
+
+}
+```
+
+```{r}
+hamby224_sensitivity_results <- hamby224_sensitivity_outputs %>%
   mutate(situation = ifelse(bin_continuous == TRUE & quantile_bins == TRUE, 
                             sprintf("%.0f quantile bins", nbins),
                             ifelse(bin_continuous == TRUE & quantile_bins == FALSE, 
@@ -756,12 +814,112 @@ hamby224_test_explain %>%
   mutate(bin_situation = ifelse(bin_continuous == TRUE & quantile_bins == TRUE,
                                 "quantile bins",
                                 ifelse(bin_continuous == TRUE & quantile_bins == FALSE,
-                                       "equally spaced bins", "other"))) %>%
-  filter(set == "Set 1") %>%
-  droplevels() %>%
-  na.omit() %>%
-  select(situation, case, feature, feature_weight) %>%
-  ggplot(aes(x = case, y = situation, fill = feature)) + 
-  geom_tile()
+                                       "equally spaced bins", "other")))
 ```
 
+```{r}
+hamby224_sensitivity_mses <- hamby224_sensitivity_results %>%
+  group_by(set, rep, situation, bin_situation) %>%
+  summarise(mse = sum((diff)^2) / length(diff))
+```
+
+The plot below shows boxplots of the 10 mean squared errors computed for each of the input situations for each set. There does not appear to be much variation for most of the cases. The largest amount of variation occurs with 4 and 5 equally spaced bins. There is moderate variability for 3 equally spaced bins, but all of the 10 runs resulted in much lower mses than any of the other situations. This still seems to support the choice of using 3 equally spaced quantile bins for both sets.
+
+```{r}
+hamby224_sensitivity_mses %>%
+  ggplot(aes(x = situation, y = mse)) + 
+  geom_boxplot(aes(color = bin_situation)) + 
+  geom_point() + 
+  facet_grid( ~ set) + 
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) + 
+  labs(x = "", y = "MSE")
+```
+
+```{r}
+hamby224_consistency <- hamby224_sensitivity_results %>%
+  select(set, situation, bin_situation, case, rep, feature, feature_weight) %>%
+  mutate(feature_weight_abs = abs(feature_weight)) %>%
+  arrange(set, situation, case, rep, desc(feature_weight_abs)) %>%
+  group_by(set, situation, case, rep) %>%
+  slice(1) %>%
+  ungroup() %>%
+  group_by(set, situation, bin_situation, case) %>%
+  summarise(nlevels = length(levels(factor(feature))),
+            count = n()) %>%
+  ungroup() %>%
+  group_by(set, situation, bin_situation) %>%
+  summarise(mean_nlevels = mean(nlevels),
+            sd_nlevels = sd(nlevels),
+            upper = mean(nlevels) + sd(nlevels),
+            lower = mean(nlevels) - sd(nlevels),
+            max = max(nlevels),
+            min = min(nlevels))
+```
+
+To assess the consistency of the results, I determined the number of different features chosen by LIME as the top feature within a test case across the 10 replicates. I then computed the average number of different top features chosen by LIME within a input situations for each set. The plot below contains these values shown as the dots. The error bars represent one standard deviation above and below the mean. Note that the number of levels cannot go below 1, but the error bars go below 1. I have decided to ignore this for now, but I would need to come up with a better representation if I used this for something.
+
+There are a handful of situations with a mean near one and very little variation. However, the largest mean is around 2, which is not very high. This seems to suggest that LIME is relatively consistent across runs.
+
+```{r}
+hamby224_consistency %>%
+  ggplot(aes(x = situation, y = mean_nlevels)) + 
+  geom_point(aes(color = bin_situation)) + 
+  geom_errorbar(aes(ymin = lower, ymax = upper)) +
+  facet_grid(. ~ set) + 
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+The bar chart below shows the proportion of different number of top features chosen across all test cases within a set for each input situation. This shows that the most different features chosen was four. However, many of the cases only have one or two different features chosen, and usually, a larger proportion of the cases have only one top feature chosen across the 10 reps.
+
+```{r}
+hamby224_sensitivity_results %>%
+  select(set, situation, case, rep, feature, feature_weight) %>%
+  mutate(feature_weight_abs = abs(feature_weight)) %>%
+  arrange(set, situation, case, rep, desc(feature_weight_abs)) %>%
+  group_by(set, situation, case, rep) %>%
+  slice(1) %>%
+  ungroup() %>%
+  group_by(set, situation, case) %>%
+  summarise(nlevels = length(levels(factor(feature)))) %>%
+  ggplot(aes(x = situation, fill = factor(nlevels))) + 
+  geom_bar(position = "stack") +
+  facet_grid( ~ set) + 
+  theme(legend.position = "bottom", 
+        axis.text.x = element_text(angle = 45, hjust = 1)) + 
+  scale_fill_brewer(palette = "Blues")
+```
+
+The plot below needs some work, but it does contain some interesting information. Right now, I am only concentrating on set 1. We can see that with some lime settings, all cases have the same "best" variable chosen, and other settings have multiple important variables that depend on the case. We can also see that different variables are selected as important depending on the number of bins. It is also interesting to note that when comparing the quantile bins to the equally spaced bins, this plot shows that the equally spaced bins tend to choose the same first variable for all cases. On the other hand, the quantile bins choose different first variables for the cases.
+
+The fact that different features get chosen as the top feature for different estimation techniques makes sense. You would expect that the number of bins would determine which features are better suited for predicting whether or not a comparison is a match. For example, if you look back at the feature distribution plots, you can see that ccf is the obvious choice for determining between matches and non-matches if you have to choose two equally spaced bins. This is the feature that lime most frequently chooses. You can make similar arguments for other cases as well. Even though different inputs select different variables, I would expect that some variables will be better at prediction than others. I think this is what leads some input values to better LIME explanations and lower MSEs than others.
+
+In the meeting with Heike, we talked about how this plot suggests that LIME is not doing a very good job of providing local explanations. Regardless of the case, it is often suggesting only one of two variables are important, and the variable importance depends on the number of bins. In this plot, I would like consistency in the x-direction, but I would like variability in the y-direction to better understand the variables that are important for a specific case.
+
+```{r fig.height = 8, fig.width = 10}
+hamby224_sensitivity_results %>%
+  filter(set == "Set 1") %>%
+  droplevels() %>%
+  select(situation, case, rep, feature, feature_weight) %>%
+  mutate(feature_weight_abs = abs(feature_weight)) %>%
+  arrange(situation, case, rep, desc(feature_weight_abs)) %>%
+  group_by(situation, case, rep) %>%
+  slice(1) %>%
+  ungroup() %>%
+  group_by(situation, case) %>%
+  mutate(nlevels = length(levels(factor(feature)))) %>%
+  ungroup() %>%
+  arrange(situation, desc(nlevels), case) %>%
+  mutate(order = rep(rep(1:length(levels(case)), each = 10), 12)) %>%
+  ggplot(aes(x = order, fill = feature)) + 
+  geom_bar(position = "stack", width = 1) + 
+  coord_flip() + 
+  facet_wrap(situation ~ ., ncol = 5) +
+  #facet_grid(nlevels ~ situation) +
+  theme(legend.position = "bottom",
+        axis.text.y = element_blank(),
+        axis.ticks.y = element_blank()) + 
+  scale_fill_brewer(palette = "Blues") + 
+  labs(x = "cases")
+```
